# py-cfg-lib

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  setup.cfg  setup.py  test_config.py  tox.ini
.github/workflows/: package-tests.yml
config/: __init__.py  parser.py  tokens.py
test/: dummydata.txt  forms.cfg  forms.conf  pos.forms.cfg.txt  testdata.txt
test/another/: level2.cfg
test/base/: base.cfg  logging.cfg  main.cfg  redirects.cfg  top.cfg
test/derived/: admin.cfg  context.cfg  data.cfg  dupes.cfg  example.cfg  forms.cfg  incl_list.cfg  incl_mapping_body.cfg  jslibs.cfg  lang.cfg  level1.cfg  logging.cfg  main.cfg  pages.cfg  recurse.cfg  routes.cfg  test.cfg
