[metadata]
name = config
version = attr: config.__version__
description = A hierarchical, easy-to-use, powerful configuration module for Python.
long_description = This module allows a hierarchical configuration scheme with support
    for mappings and sequences, cross-references between one part of the configuration
    and another, the ability to flexibly access real Python objects without full-blown
    eval(), an include facility, and simple expression evaluation. Interfaces easily
    with environment variables and command-line options.
url = http://docs.red-dove.com/cfg/python.html
author = Vinay Sajip
author_email = vinay_sajip@red-dove.com
maintainer = Vinay Sajip
maintainer_email = vinay_sajip@red-dove.com
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = http://docs.red-dove.com/cfg/python.html
    Source = https://github.com/vsajip/py-cfg-lib
    Tracker = https://github.com/vsajip/py-cfg-lib/issues
keywords = configuration
platforms = any

[options]
packages = config

[bdist_wheel]
universal = 1
